<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

   <data>

      <variable
          name="detailListViewModel"
          type="com.example.mibus.schedule_editor_screen.model.EditorScheduleModel" />
   </data>



   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/EditorScheduleFragmentId"
    tools:context=".schedule_editor_screen.presentation.ScreenEditorScheduleFragment"
    android:orientation="vertical">

   <!-- TODO: Update blank fragment layout -->


   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="top|center"
       android:layout_marginTop="24dp"
       android:text="1" />


   <EditText
       android:id="@+id/editTitle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="16dp"
       android:layout_marginRight="16dp"
       android:layout_marginTop="64dp"
       tools:ignore="TouchTargetSizeCheck"
       android:hint="@string/name_bus_string"
       android:text=""
       android:autofillHints=""
       android:inputType= "text" />
   <EditText
       android:id="@+id/editSubTitle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="16dp"
       android:layout_marginRight="16dp"
       android:layout_marginTop="64dp"
       tools:ignore="TouchTargetSizeCheck"
       android:hint="@string/sub_name_bus_string"
       android:autofillHints=""
       android:inputType= "text" />



   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/bottom_done"
       style="@style/TextViewBus"
       android:layout_width="70dp"
       android:layout_height="70dp"
       android:layout_marginTop="24dp"
       android:layout_marginEnd="24dp"
       android:layout_marginBottom="24dp"
       android:layout_gravity="end|bottom"
       android:text="@string/btn_done"
       app:layout_constraintTop_toBottomOf="@+id/btn_map_user_info" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/bottom_delete"
          style="@style/TextViewBus"
          android:layout_width="match_parent"
          android:layout_height="70dp"
          android:layout_gravity="bottom"
          android:layout_marginStart="24dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="24dp"
          android:layout_marginBottom="24dp"
          android:onClick="@{()->detailListViewModel.onClose()}"
          android:text="@string/btn_delete"
          app:layout_constraintTop_toBottomOf="@+id/btn_map_user_info" />


   </LinearLayout>

</layout>