<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".authorization.AuthFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/authFragmentId"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_info_git"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <TextView
        android:id="@+id/btn_auth"
        style="@style/TextViewBus"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="280dp"
        android:padding="8dp"
        android:text="@string/text_authorization"
        app:autoSizeTextType="uniform"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameApp" />


    <TextView
        android:id="@+id/btn_sing_up"
        style="@style/TextViewBus"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="    Sing Up  "
        app:autoSizeTextType="uniform"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_auth"
        app:layout_constraintVertical_bias="0.48000002" />

    <TextView
        android:id="@+id/textNameApp"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="100dp"
        android:text="@string/app_name"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="54sp"
        app:autoSizeTextType="uniform"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toBottomOf="@+id/btn_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

</androidx.constraintlayout.widget.ConstraintLayout>


</layout>